--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=23w07a
-	yarn_mappings=23w07a+build.3
-	loader_version=0.14.14
+# check these on https://fabricmc.net/develop
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.2
+loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 0.0.3
-	maven_group = de.seiboldsmuehle
-	archives_base_name = stacked-armor-trims
+mod_version = 1.0.0
+maven_group = de.seiboldsmuehle
+archives_base_name = stacked-armor-trims
 
 # Dependencies
-	fabric_version=0.74.1+1.19.4
+fabric_version=0.83.1+1.20.1
